--- a/product/wsnIndoorBack/html/monitor_anchor.html
+++ b/product/wsnIndoorBack/html/monitor_anchor.html
@@ -23,6 +23,7 @@
 
     <!--Bootstrap3 -->
     <link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap-3.3.7/css/build.css">
     <script src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script src="../js/vendor/popper.min.js"></script>
 
@@ -32,13 +33,14 @@
     <!--template.js-->
     <script src="../js/vendor/template.js"></script>
 
-    <!--baidu map-->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Nj2QIPFYyVb49p93WnQhxbvjPt4lsmco"></script>
     <!--路由-->
     <script src="../js/back/back_route.js"></script>
     <!--css-->
     <link href="../css/back1_main.css" rel="stylesheet" type="text/css" />
     <link href="../css/back/monitor_anchor.css" rel="stylesheet" type="text/css" />
+    <!--进度条-->
+    <link href="../css/back/progress_step.css" rel="stylesheet" type="text/css" />
+
 
     <style type="text/css">
         /*vue加载数据时，不显示难看的花括号*/
@@ -53,8 +55,11 @@
 </head>
 
 <body>
+    <!--隐藏域，由后端填写-->
     <p id="pageGroupId" style="display:none">monitor</p>
     <p id="pageId" style="display:none">mAnchor</p>
+    <p id="bid" style="display:none">1</p>
+    <p id="bname" style="display:none">教学楼2号</p>
     <div id="mainbox" class="mainbox">
         <!--hearder是顶部-->
         <header class="top">
@@ -93,9 +98,12 @@
                 <div class="content-bar">
                     <div class="content-bar-left">
                         <span class="content-bar-breadcrumb">{{title}}</span>
-                        <span v-if="!mapFinishLoading" class="content-bar-result-count data-loading">加载中</span>
+                        <span v-if="mapDetail.title" class="content-bar-breadcrumb">&nbsp&nbsp所在位置：{{mapDetail.title}}</span>
+                        <!--<span v-if="!mapFinishLoading" class="content-bar-result-count data-loading">加载中</span>-->
                     </div>
                     <div class="content-bar-right">
+                        <!-- 按钮触发模态框 -->
+                        <!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">开始演示模态框</button>-->
                         <!--<button id="refresh" type="button" class="btn btn-primary" @click="refresh">刷新</button>-->
                     </div>
                 </div>
@@ -115,23 +123,105 @@
                             <!--楼层-->
                             <div class="map-floor">
                                 <div class="btn-group btn-group-vertical map-floor-btngroup ">
-                                    <button v-for="(value,index) in buildMapRel" class="btn btn-default" type='button' :floor='value.floor' :mapId='value.mapId'>{{value.floor}}F</button>
+                                    <button @click='loadData' v-for="(value,index) in buildMapRel" class="btn btn-default" type='button' :floor='value.floor'
+                                        :mapId='value.mapId'>{{value.floor}}F</button>
                                 </div>
                             </div>
                         </div>
                         <!--状态-->
                         <div class="map-footer">
-                            <span v-if="!mapFinishLoading" class="map-status data-loading">加载中</span>
-                            <span v-else class="map-status">加载完毕--地图名称：{{mapDetail.title}}</span>
+                            <span v-if="!mapFinishLoading" class="map-status data-loading">{{mapLoadingMessage}}</span>
+                            <span v-else class="map-status">{{mapMessage}}</span>
                         </div>
                     </div>
+                    <div class='content-info'>
+                        <div class="anchor-info white-panel">
+                            <div class="anchor-info-top">
+                                <h4>锚节点信息</h4>
+                                <span v-if='network.nid<=0'>请于地图右上角选择一个楼层</span>
+                                <span v-if='network.anchorStatus<3'>完成"标定关键锚节点"后才能查看</span>
+                                <span v-else>加载完毕</span>
+                            </div>
+                            <div class="anchor-info-container" v-if='network.anchorStatus>=3'>
+                                <div id="anchorOperate">
+                                    <div class="checkbox checkbox-success">
+                                        <input id="checkbox3" class="styled" type="checkbox">
+                                        <label for="checkbox3">关键锚节点</label>
+                                    </div>
+                                    <div class="checkbox checkbox-success">
+                                        <input id="checkbox3" class="styled" type="checkbox" disabled v-if='network.anchorStatus<6'>
+                                        <input id="checkbox3" class="styled" type="checkbox" v-else>
+                                        <label for="checkbox3">普通锚节点</label>
+                                    </div>
+                                </div>
+                                <div class="anchor-info-table">
+                                    <table class="table table-bordered table-sm" style="margin-top:10px;">
+                                        <thead>
+                                            <tr>
+                                                <th width="35%">键</th>
+                                                <th width="65%">值</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>建筑物id</td>
+                                                <td>123</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
 
-                    <div class="content-mapinfo">
-
+                        <div class="workflow-info white-panel">
+                            <h4>锚节点布设状态</h4>
+                            <span v-if='network.nid<=0'>请于地图右上角选择一个楼层</span>
+                            <span v-else-if='!netFinishLoading'>{{netLoadingMessage}}</span>
+                            <span v-else-if='netFinishLoading'>{{netMessage}}</span>
+                            <div class="progress-inner">
+                                <ul id="anchorDeploySteps" v-if='network.nid>0' class="steps">
+                                    <!--<li>新网络</li>
+                                    <li>布设硬件</li>
+                                    <li>标定关键锚节点</li>
+                                    <li>开启网络</li>
+                                    <li class="todo">洪范</li>
+                                    <li class="waiting">训练</li>
+                                    <li class="waiting">完成构建</li>-->
+                                    <li v-for='(val,key,index) in anchorDeploySteps' :index=index :name='val' :class='{waiting:network.anchorStatus<index,todo:network.anchorStatus==index&&network.anchorStatus!=6&&network.anchorTaskStatus==0,fail:network.anchorStatus==index&&network.anchorTaskStatus==2}'>{{val}}</li>
+                                </ul>
+                            </div>
+                            <div class="anchor_operate" v-if='network.nid>0'>
+                                <button v-if="network.anchorTaskStatus==1&&network.anchorStatus!=6" id="startProcess" type="button" class="btn btn-primary"
+                                    disabled>任务进行中</button>
+                                <button @click='startTask' v-if="network.anchorStatus!=6&&network.anchorTaskStatus==0||network.anchorTaskStatus==2" id="startProcess"
+                                    type="button" class="btn btn-primary">开始任务</button>
+                                <!--<button @click='startProcess' v-if="network.anchorStatus==anchorDeploySteps.length" id="startProcess" type="button" class="btn btn-primary">开始任务</button>-->
+                                <button @click='startTask' v-if="network.anchorStatus==6&&network.anchorTaskStatus==0||network.anchorTaskStatus==2" id="startProcess"
+                                    type="button" class="btn btn-primary">重新开始任务</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!--内容end-->
             </div>
+        </div>
+
+        <!--模态框-流程-->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">模态框（Modal）标题</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        <button type="button" class="btn btn-primary">提交更改</button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal -->
         </div>
     </div>
 
@@ -149,6 +239,8 @@
     <script src="../js/back/mock.js"></script>
     <!--app-->
     <script src="../js/back/back_monitor_anchor.js"></script>
+    <!--ajax-->
+    <script src="../js/back/back_ajax.js"></script>
     <!--gmap-->
     <script src="../js/back/back_gmap.js"></script>
 
