--- a/product/wsnIndoorBack/html/monitor_overview.html
+++ b/product/wsnIndoorBack/html/monitor_overview.html
@@ -98,9 +98,10 @@
                 <div class="content-overview">
                     <div class="content-overview-left">
                         <div id="sourceOverview" class="white-panel">
+                            
                             <h3>网络拓扑</h3>
                             <div class="network-topology">
-                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                                <svg id="topoImage" xmlns="http://www.w3.org/2000/svg" version="1.1">
                                     <!--<image x=0 y=0 class="network-topology-node" href="../fonts/iconfont/gateway.png" />
                                     <image x=100 y=110 class="network-topology-node" href="../fonts/iconfont/coordinator.png" />
                                     <image x=200 y=110 class="network-topology-node" href="../fonts/iconfont/coordinator.png" />
@@ -126,6 +127,7 @@
                                 </svg>
                             </div>
                         </div>
+
                     </div>
                     <div class="content-overview-right">
                         <div id="question" class="white-panel">
